# BombermanCpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
assets/sprites/: map.xml
cmake/config/: CmakeConfig.h.in
cmake/sdl2/: FindSDL2.cmake
doc/: Doxyfile
include/: BombermanApp.h  BombermanGraphics.h  CmakeConfig.h  DrawablePlayer.h
include/core/: BombermanCore.h  Grid.h  Player.h  Tile.h
include/sdl/: SdlApp.h
side_programs/: CMakeLists.txt
src/: BombermanApp.cpp  CMakeLists.txt  DrawablePlayer.cpp  main.cpp
src/core/: Grid.cpp  Player.cpp  Tile.cpp
src/sdl/: SdlApp.cpp
test/: test_grid.cpp
